# BioProtocols

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
admin/: .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  package.json
admin/nginx/: default.conf
admin/public/: index.html
admin/src/: App.tsx  config.example.js
admin/src/components/: Error.tsx  PageController.tsx  Routes.tsx  TopNavbar.tsx
admin/src/context/: AppContextProvider.tsx
admin/src/data/: data2.json
admin/src/hooks/: useToken.ts
admin/src/utils/: interfaces.ts  types.ts
db/: init-mongo.js
nginx/configs/: default.conf
server/: .env  .env.example  Dockerfile  README.md  index.ts  package.json
server-rust/: .gitignore  README.md  samconfig.toml  template.yaml
server-rust/labs_func/: Cargo.toml
server-rust/labs_func/src/: main.rs
server-rust/user_func/: Cargo.toml
server-rust/user_func/src/: main.rs
server/src/: app.js
server/src/config/: db.js
server/src/controllers/: data_controller.js  user_controller.js
server/src/data/: data2.json
server/src/middleware/: index.js
server/src/routes/: routes.js
student/: .env  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  package.json
student/public/: index.html
student/src/: App.tsx  Dockerfile  config.example.js
student/src/components/: Error.tsx  Home.tsx  Lab.tsx  LabDoing.tsx  LabEnd.tsx  LabStart.tsx  Landing.tsx  PageController.tsx  Quiz.tsx  TopNavbar.tsx
student/src/data/: data.json
student/src/style/: Styled.tsx
student/src/utils/: Styled.tsx  functions.ts  (+2 more)
(+31 files in other folders)
