[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
aws-smithy-client = { version = "0.52.0", features = ["test-util"] }
http = "0.2.8"
hyper = "0.14.26"
json = "0.12.4"
lambda_http = "0.7.2"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"
